--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Backend do projeto de controle de alugueis",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --transpile-only --poll --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "typeorm:migration:create": "ts-node-dev ./node_modules/typeorm/cli.js migration:create",
+    "typeorm:migration:run": "ts-node-dev ./node_modules/typeorm/cli.js migration:run -d src/database/dataSource.ts",
+    "typeorm:migration:revert": "ts-node-dev ./node_modules/typeorm/cli.js migration:revert -d src/database/dataSource.ts"
   },
   "repository": {
     "type": "git",
@@ -19,11 +23,15 @@
   "homepage": "https://github.com/RubensCruz88/ControleAlugueis_backend#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "tsyringe": "^4.7.0",
+    "typeorm": "^0.3.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/uuid": "^8.3.4",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
