--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
   },
   "homepage": "https://github.com/RubensCruz88/ControleAlugueis_backend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
