--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend do projeto de controle de alugueis",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --poll --ignore-watch node_modules --respawn src/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --poll --ignore-watch node_modules --respawn src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "typeorm:migration:create": "ts-node-dev ./node_modules/typeorm/cli.js migration:create",
     "typeorm:migration:run": "ts-node-dev ./node_modules/typeorm/cli.js migration:run -d src/database/dataSource.ts",
@@ -38,6 +38,7 @@
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4"
   }
 }
